# SIBUD

./: .env  README.md  docker-compose.yml  pytest.ini  setup.py
Documents/: Presentation.txt
SIBUD.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backendjava/: Dockerfile  pom.xml
backendjava/data/: sibud_db.mv.db
backendjava/src/main/java/com/sibud/: SIBUDApplication.java  TestApplication.java
backendjava/src/main/java/com/sibud/controllers/: UserController.java
backendjava/src/main/java/com/sibud/models/: UserModel.java
backendjava/src/main/java/com/sibud/repositories/: UserRepository.java
backendjava/src/main/java/com/sibud/services/: UserService.java
backendpython/: Dockerfile  Dockerfile.txt  environment_variables.py  main.py  pyproject.toml  requirements.txt
backendpython/config/: environment_variables.py
backendpython/controllers/: books_router.py  fines_router.py  loans_router.py  notifications_router.py
backendpython/models/: books.py  fines.py  loans.py  notifications.py
backendpython/repositories/: books_repository.py  fine_repository.py  loans_repository.py  notifications_repository.py
backendpython/services/: books_service.py  fines_service.py  loans_service.py  notifications_service.py
data/: fines.json  loans.json  notifications.json  sibud_db.mv.db  sibud_db.trace.db
diagrama/: app.py  copi.txt  dig.txt
diagrama/java_servi/src/main/: User
diagrama/modules/: books.py  fines.py  loans.py  notifications.py
tests/python/: test_books.py  test_fines.py  test_loans.py  test_notifications.py
(+1 files in other folders)
